[gd_scene load_steps=3 format=3 uid="uid://c3km5j28x01f3"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_dlr7w"]
[ext_resource type="FontFile" uid="uid://bg0dld30wc52x" path="res://fonts/Pixeled.ttf" id="2_rkjc1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_dlr7w")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_bottom = 183.0
grow_horizontal = 0
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_rkjc1")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -168.0
offset_right = 360.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -10
theme_override_fonts/font = ExtResource("2_rkjc1")
theme_override_font_sizes/font_size = 50
text = "Dodge the enemies !"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartBtn" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -104.0
offset_right = 104.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_rkjc1")
theme_override_font_sizes/font_size = 30
text = "START !"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
